<resources>
    <string name="app_name">Memegur</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_upload">Upload d\'une photo</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="upload_description">Prenez ou choisissez une photo, ecrivez là et uploadez là sur imgur</string>
    <string name="button_take">Prendre une photo</string>
    <string name="button_select">Choisir une photo</string>
    <string name="button_write">Ecrire</string>
    <string name="button_save">Sauver dans le tel</string>
    <string name="button_upload">Tel + imgur</string>
    <string name="copy">Copier l\'url</string>
    <string name="share">Partager l\'url</string>
    <string name="saved">Image enregistrée dans le dossier Image</string>
    <string name="textLoader">Chargement...</string>
    <string name="loadingGif">LoadingGif</string>
    <string name="loadingFail">Oups, une erreur ...</string>
    <string name="Top">Top</string>
    <string name="Hot">hot</string>
    <string name="User">User</string>
</resources>
